--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,11 @@
         </dependency>
         <dependency>
             <groupId>io.ktor</groupId>
+            <artifactId>ktor-server-request-validation-jvm</artifactId>
+            <version>${ktor_version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.ktor</groupId>
             <artifactId>ktor-server-resources-jvm</artifactId>
             <version>${ktor_version}</version>
         </dependency>
@@ -177,6 +182,12 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson_version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.ktor</groupId>
+            <artifactId>ktor-server-request-validation</artifactId>
+            <version>3.1.2</version>
+            <scope>implementation</scope>
         </dependency>
 
     </dependencies>
