add registration mode settings

--- a/src/main/resources/application.example.yaml
+++ b/src/main/resources/application.example.yaml
@@ -9,8 +9,9 @@ ktor:
     port: 9978
     host: 127.0.0.1
 
-instance:
-  url: "https://aster.example.com/"
+url: "https://aster.example.com/"
+registrations: invite
+
 database:
   host: localhost
   port: 5432
