tidying up, working on redoing config system. currently wont start for a weird reason i dont get. will fix later

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <jackson_version>2.19.0</jackson_version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
-        <main.class>io.ktor.server.netty.EngineMain</main.class>
+        <main.class>me.blueb.ApplicationKt</main.class>
     </properties>
     <repositories>
     </repositories>
