--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,7 @@
         <dependency>
             <groupId>io.ktor</groupId>
             <artifactId>ktor-server-request-validation</artifactId>
-            <version>3.1.2</version>
+            <version>${ktor_version}</version>
             <scope>implementation</scope>
         </dependency>
         <dependency>
@@ -125,7 +125,7 @@
         <dependency>
             <groupId>io.ktor</groupId>
             <artifactId>ktor-server-call-id</artifactId>
-            <version>3.1.2</version>
+            <version>${ktor_version}</version>
             <scope>implementation</scope>
         </dependency>
 
@@ -134,40 +134,36 @@
 			<artifactId>pf4j</artifactId>
 			<version>${pf4j_version}</version>
 		</dependency>
-		<dependency>
-			<groupId>io.ktor</groupId>
-			<artifactId>ktor-server-cors</artifactId>
-			<version>3.1.2</version>
-			<scope>implementation</scope>
-		</dependency>
 
 		<dependency>
 			<groupId>io.ktor</groupId>
 			<artifactId>ktor-server-auth</artifactId>
-			<version>3.1.3</version>
+			<version>${ktor_version}</version>
 			<scope>implementation</scope>
 		</dependency>
 		<dependency>
 			<groupId>io.ktor</groupId>
-			<artifactId>ktor-client-core</artifactId>
-			<version>3.1.3</version>
-			<scope>implementation</scope>
-		</dependency>
-		<dependency>
-			<groupId>io.ktor</groupId>
-			<artifactId>ktor-client-apache</artifactId>
-			<version>3.1.3</version>
-			<scope>implementation</scope>
-		</dependency>
-		<dependency>
-			<groupId>io.ktor</groupId>
-			<artifactId>ktor-server-auth</artifactId>
-			<version>3.1.3</version>
-			<scope>implementation</scope>
+			<artifactId>ktor-server-cors-jvm</artifactId>
+			<version>${ktor_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.ktor</groupId>
 			<artifactId>ktor-server-auth-jvm</artifactId>
+			<version>${ktor_version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.ktor</groupId>
+			<artifactId>ktor-server-call-logging-jvm</artifactId>
+			<version>${ktor_version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.ktor</groupId>
+			<artifactId>ktor-server-default-headers-jvm</artifactId>
+			<version>${ktor_version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.ktor</groupId>
+			<artifactId>ktor-server-forwarded-header-jvm</artifactId>
 			<version>${ktor_version}</version>
 		</dependency>
 
@@ -252,6 +248,18 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-text</artifactId>
 			<version>1.13.1</version>
+		</dependency>
+		<dependency>
+			<groupId>io.ktor</groupId>
+			<artifactId>ktor-server-forwarded-header</artifactId>
+			<version>3.1.3</version>
+			<scope>implementation</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.ktor</groupId>
+			<artifactId>ktor-server-default-headers</artifactId>
+			<version>3.1.3</version>
+			<scope>implementation</scope>
 		</dependency>
 
 	</dependencies>
