--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,7 @@
             <groupId>io.ktor</groupId>
             <artifactId>ktor-server-request-validation</artifactId>
             <version>${ktor_version}</version>
-            <scope>implementation</scope>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>io.ktor</groupId>
@@ -126,7 +126,7 @@
             <groupId>io.ktor</groupId>
             <artifactId>ktor-server-call-id</artifactId>
             <version>${ktor_version}</version>
-            <scope>implementation</scope>
+            <scope>compile</scope>
         </dependency>
 
 		<dependency>
@@ -139,7 +139,7 @@
 			<groupId>io.ktor</groupId>
 			<artifactId>ktor-server-auth</artifactId>
 			<version>${ktor_version}</version>
-			<scope>implementation</scope>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>io.ktor</groupId>
@@ -253,13 +253,13 @@
 			<groupId>io.ktor</groupId>
 			<artifactId>ktor-server-forwarded-header</artifactId>
 			<version>3.1.3</version>
-			<scope>implementation</scope>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>io.ktor</groupId>
 			<artifactId>ktor-server-default-headers</artifactId>
 			<version>3.1.3</version>
-			<scope>implementation</scope>
+			<scope>compile</scope>
 		</dependency>
 
 	</dependencies>
@@ -322,7 +322,7 @@
 						<configuration>
 							<executable>pnpm</executable>
 							<arguments>
-								<argument>i</argument>
+								<argument>install</argument>
 							</arguments>
 							<workingDirectory>${project.basedir}/frontend</workingDirectory>
 						</configuration>
