--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,16 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@tabler/icons-react": "^3.33.0",
+		"@tanstack/react-router": "^1.120.5",
+		"@tanstack/react-router-devtools": "^1.120.6",
 		"react": "^19.1.0",
-		"react-dom": "^19.1.0"
+		"react-dom": "^19.1.0",
+		"sass": "^1.89.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.25.0",
+		"@tanstack/router-plugin": "^1.120.5",
 		"@types/react": "^19.1.2",
 		"@types/react-dom": "^19.1.2",
 		"@vitejs/plugin-react-swc": "^3.9.0",
