--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.25.0",
+		"@tanstack/react-form": "^1.11.2",
 		"@tanstack/router-plugin": "^1.120.5",
 		"@types/react": "^19.1.2",
 		"@types/react-dom": "^19.1.2",
