backend: createdAt defaults to current time on insert, role service & generate admin and mod role at SetupService, notification table and entity, change run files to use bash instead of zsh

--- a/configuration.example.yaml
+++ b/configuration.example.yaml
@@ -4,7 +4,7 @@ name: "Aster"
 # URL instance is to be accessible by.
 # Do not reuse domains after starting an instance.
 # Do not change after you start using this instance.
-url: "https://kt.example.com/"
+url: "https://aster.example.com/"
 
 # options:
 #   open      - anyone can register
@@ -23,16 +23,3 @@ database:
     db: aster
     user: aster
     password: aster
-
-# Delay is a number in seconds between each retry attempt at a failed job, increases exponentially
-# Threads is how many threads to dedicate to the thread pool of a queue's processors
-queue:
-    inbox:
-        delay: 300
-        threads: 8
-    deliver:
-        delay: 600
-        threads: 6
-    system:
-        delay: 60
-        threads: 4
