--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -19,9 +19,10 @@
 		"strict": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"erasableSyntaxOnly": true,
 		"noFallthroughCasesInSwitch": true,
-		"noUncheckedSideEffectImports": true
+		"noUncheckedSideEffectImports": true,
+
+		"noImplicitAny": false
 	},
 	"include": [
 		"src"
