--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@tabler/icons-react": "^3.33.0",
+		"@tanstack/react-query": "^5.76.1",
 		"@tanstack/react-router": "^1.120.5",
 		"@tanstack/react-router-devtools": "^1.120.6",
 		"@tanstack/react-store": "^0.7.0",
