--- a/.github/workflows/build-backend.yml
+++ b/.github/workflows/build-backend.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
     build:
-        runs-on: [ubuntu-latest, macos-latest, windows-latest]
+        runs-on: ubuntu-latest
         steps:
             - name: Checkout repository
               uses: actions/checkout@v3
