--- a/.github/workflows/build-frontend.yml
+++ b/.github/workflows/build-frontend.yml
@@ -3,7 +3,7 @@ on: [push]
 
 jobs:
     build:
-        runs-on: [ubuntu-latest, macos-latest, windows-latest]
+        runs-on: ubuntu-latest
         steps:
             - name: Checkout repository
               uses: actions/checkout@v3
