--- a/.github/workflows/build-backend.yml
+++ b/.github/workflows/build-backend.yml
@@ -13,6 +13,9 @@ jobs:
             - name: Checkout repository
               uses: actions/checkout@v3
 
+            - name: Install pnpm
+              run: npm install -g pnpm
+
             - name: Setup JFK
               uses: actions/setup-java@v4
               with:
