archive artifacts (i hope) on backend build

--- a/.github/workflows/build-backend.yml
+++ b/.github/workflows/build-backend.yml
@@ -24,3 +24,8 @@ jobs:
 
             - name: Run aster.sh build
               run: ./aster.sh build
+
+            - name: Archive artifacts
+              uses: actions/upload-artifact@v4
+              with:
+                  path: target/aster*.jar
