--- a/.github/workflows/build-backend.yml
+++ b/.github/workflows/build-backend.yml
@@ -25,7 +25,20 @@ jobs:
             - name: Run aster.sh build
               run: ./aster.sh build
 
-            - name: Archive artifacts
+            - name: Get package version
+              id: get_version
+              run: |
+                  PACKAGE_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+                  echo "PACKAGE_VERSION=PACKAGE_VERSION" >> $GITHUB_ENV
+
+            - name: Archive artifact
               uses: actions/upload-artifact@v4
               with:
-                  path: target/aster*.jar
+                  name: "aster-${{ env.PACKAGE_VERSION }}.jar"
+                  path: target/aster-${{ env.PACKAGE_VERSION }}.jar
+
+            - name: Archive artifact with dependencies
+              uses: actions/upload-artifact@v4
+              with:
+                  name: "aster-${{ env.PACKAGE_VERSION }}-jar-with-dependencies.jar"
+                  path: target/aster-${{ env.PACKAGE_VERSION }}-jar-with-dependencies.jar
