--- a/.github/workflows/build-backend.yml
+++ b/.github/workflows/build-backend.yml
@@ -28,8 +28,8 @@ jobs:
             - name: Get package version
               id: get_version
               run: |
-                  PACKAGE_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
-                  echo "PACKAGE_VERSION=PACKAGE_VERSION" >> $GITHUB_ENV
+                  MVN_PACKAGE_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+                  echo "PACKAGE_VERSION=MVN_PACKAGE_VERSION" >> $GITHUB_ENV
 
             - name: Archive artifact
               uses: actions/upload-artifact@v4
