--- a/.github/workflows/build-backend.yml
+++ b/.github/workflows/build-backend.yml
@@ -29,7 +29,7 @@ jobs:
               id: get_version
               run: |
                   MVN_PACKAGE_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
-                  echo "PACKAGE_VERSION=MVN_PACKAGE_VERSION" >> $GITHUB_ENV
+                  echo "PACKAGE_VERSION=$MVN_PACKAGE_VERSION" >> $GITHUB_ENV
 
             - name: Archive artifact
               uses: actions/upload-artifact@v4
