backend: refactoring, repo: rename workflows and update readme

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
-name: build-backend.yml
+name: build
 on:
     workflow_run:
-        workflows: ["build-frontend.yml"]
+        workflows: ["build frontend"]
         branches: [main]
         types:
             - completed
