--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
-name: build
+name: Build
 on:
     workflow_run:
-        workflows: ["build frontend"]
+        workflows: ["Build Frontend"]
         branches: [main]
         types:
             - completed
