--- a/pom.xml
+++ b/pom.xml
@@ -248,6 +248,11 @@
 			<artifactId>owasp-java-html-sanitizer</artifactId>
 			<version>20240325.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.tomitribe</groupId>
+			<artifactId>tomitribe-http-signatures</artifactId>
+			<version>1.5</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.commons</groupId>
