backend: redo how api errors work using throwable, rewrite auth (this code looks so unlike mine wtf)

--- a/pom.xml
+++ b/pom.xml
@@ -295,6 +295,11 @@
 			<artifactId>ktor-client-content-negotiation-jvm</artifactId>
 			<version>${ktor_version}</version>
 		</dependency>
+		<dependency>
+			<groupId>io.ktor</groupId>
+			<artifactId>ktor-server-status-pages-jvm</artifactId>
+			<version>${ktor_version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>site.remlit.blueb</groupId>
