--- a/configuration.example.yaml
+++ b/configuration.example.yaml
@@ -13,6 +13,12 @@ url: "https://aster.example.com/"
 host: "0.0.0.0"
 port: 9782
 
+## Debug ##
+# Only enable if you need detailed information for development.
+# Otherwise, this will needlessly slow down runtime.
+##
+debug: false
+
 ## Registrations ##
 # options:
 #   open      - anyone can register
