fix frontend actually being served for the millionth time

--- a/configuration.example.yaml
+++ b/configuration.example.yaml
@@ -19,6 +19,13 @@ port: 9782
 ##
 debug: false
 
+## Use default frontend ##
+# Whether to use the frontend packaged with the server
+# or to leave it up for plugins to handle.
+# Disabling without a plugin to add an alternate frontend
+# will make your instance unusable to most users.
+builtinFrontend: true
+
 ## Registrations ##
 # options:
 #   open      - anyone can register
