--- a/frontend/packages/app/package.json
+++ b/frontend/packages/app/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-router": "^1.132.0",
     "@tanstack/react-store": "^0.7.0",
     "@tanstack/router-plugin": "^1.132.0",
+    "mfm-js": "^0.25.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
