--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "packageManager": "pnpm@10.18.2",
   "dependencies": {
-    "aster-common": "link:../common/build/dist/js/productionLibrary"
+    "aster-common": "link:../common/build/dist/js/productionLibrary",
+    "preact-jsx-runtime": "^1.2.0"
   }
 }
