--- a/frontend/packages/app/tsconfig.json
+++ b/frontend/packages/app/tsconfig.json
@@ -1,7 +1,29 @@
 {
-	"files": [],
-	"references": [
-		{ "path": "./tsconfig.app.json"},
-		{ "path": "./tsconfig.node.json"}
-	]
+  "compilerOptions": {
+    "jsx": "react-jsx",
+    "jsxImportSource": "preact",
+    "paths": {
+      "react": [
+        "./node_modules/preact/compat/"
+      ],
+      "react/jsx-runtime": [
+        "./node_modules/preact/jsx-runtime"
+      ],
+      "react-dom": [
+        "./node_modules/preact/compat/"
+      ],
+      "react-dom/*": [
+        "./node_modules/preact/compat/*"
+      ]
+    }
+  },
+  "files": [],
+  "references": [
+    {
+      "path": "./tsconfig.app.json"
+    },
+    {
+      "path": "./tsconfig.node.json"
+    }
+  ],
 }
