--- a/.github/workflows/detekt.yml
+++ b/.github/workflows/detekt.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Setup Javas
+      - name: Setup Java
         uses: actions/setup-java@v5
         with:
           distribution: 'jetbrains'
